--- a/Book Trading/src/main/resources/application.properties
+++ b/Book Trading/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
 server.port=9090
+server.servlet.context-path =/api
 
 spring.datasource.url=jdbc:sqlserver://localhost:1433;database= BookTrading
 spring.datasource.username=sa
@@ -7,4 +8,5 @@ spring.datasource.password=123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
+
