--- a/Book Trading/src/main/resources/application.properties
+++ b/Book Trading/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.password=123
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = update
 
